RESOLVED FIXED308115
`navigation.currentEntry.key` doesn't change in private windows
https://bugs.webkit.org/show_bug.cgi?id=308115
Summary `navigation.currentEntry.key` doesn't change in private windows
Oliver Joseph Ash
Reported 2026-02-18 00:04:03 PST
https://cdpn.io/pen/debug/LEZKPLE?authentication_hash=vWMRwVGBdLOr Code: https://codepen.io/OliverJAsh/pen/LEZKPLE ```js console.log(1, window.navigation.currentEntry.key); setTimeout(() => { history.pushState(null, "", "/foo") console.log(2, window.navigation.currentEntry.key); }, 2000) ``` In non-private windows, it changes as expected after the navigation (`pushState`), but in private windows it does not change.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-25 00:04:12 PST
rupin
Comment 2 2026-03-17 10:06:36 PDT
EWS
Comment 3 2026-03-18 10:37:20 PDT
Committed 309489@main (6d6bfe8ade28): <https://commits.webkit.org/309489@main> Reviewed commits have been landed. Closing PR #60778 and removing active labels.
rupin
Comment 4 2026-03-18 13:50:01 PDT
Thank you for the bug report! This is fixed now by https://commits.webkit.org/309489@main.
Note You need to log in before you can comment on or make changes to this bug.